2013-06-14 Riccardo Mottola <rm@gnu.org>

	* GRBezierControlPoint.h
	* GRBezierControlPoint.m
	* GRBezierPathEditor.m
	Simplify and refactor drawing inside the BezierControlPoint.

	* GRText.m
	Fix zoomed drawing.

	* GRCircle.m
	Cleanup drawing, make guides slightly stronger.

2013-06-13 Riccardo Mottola <rm@gnu.org>

	* GRBoxEditor.m
	* GRCircleEditor.m
	* GRObjectControlPoint.h
	* GRObjectControlPoint.m
	Refactor drawing into the Object Control Point

2013-03-01 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m
	Check loop condition better due to unsigned transition.

2013-03-01 Riccardo Mottola <rm@gnu.org>

	* GRBezierControlPoint.h
	* GRBezierControlPoint.m
	* GRBox.m
	* GRCircle.m
	Transitions to CGFLoat missed in the previous commit.

2013-03-01 Riccardo Mottola <rm@gnu.org>

	* GRBezierPath.h
	* GRBezierPath.m
	* GRObjectControlPoint.h
	* GRObjectControlPoint.m
	* GRText.h
	* GRText.m
	CGFloat transition

2013-02-28 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m (deepCopyObjects)
	Return an autoreleased array.

2013-02-28 Riccardo Mottola <rm@gnu.org>

	* GRTextEditorView.m
	Fix warnings.

2013-02-25 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m
	When selecting with shift, unselect an already selected object.

2013-02-24 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m
	NSUInteger, CGFloat transitions, cleanup

2013-02-24 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* GRTextEditorView.m
	* shutup clang warning

2013-02-23 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m (startCircleAtPoint, startBoxAtPoint)
	Remove code for new/old editor, since it is useless for these shapes.

2013-02-23 Riccardo Mottola <rm@gnu.org>

	* GRCircleEditor.m
	* GRBoxEditor.m
	Remove unused method moveControlAtPoint :toPoint

2013-02-22 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m (startCircleAtPoint)
	Call moveControlPointOfEditor directly instead of duplicating code.

2013-02-22 Riccardo Mottola <rm@gnu.org>

	* GRCircle.[h,m]
	Add position accessor

	* GRCircleEditor.m