@@ -296,7 +296,7 @@
       for(i = 0; i < [[(GRBezierPath *)object controlPoints] count]; i++)
         {
           cp = [[(GRBezierPath *)object controlPoints] objectAtIndex: i];
-          [cp drawControlAsSelected:NO];
+          [cp drawControlAsSelected:YES];
         }
     }
   
