@@ -1,3 +1,9 @@
+2013-06-16 Riccardo Mottola <rm@gnu.org>
+
+	* GRBezierPathEditor.m
+	* GRBezierControlPoint.m
+        Fix drawing of unselected controlpoints.
+
 2013-06-14 Riccardo Mottola <rm@gnu.org>
 
 	* GRBezierControlPoint.h
